--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,16 +7,20 @@
     <style>
         body{
             height: 100vh;
-            background-color: rgb(0, 0, 0);
-            background-image: url('imagens/wallpaper002.jpg');
-            background-repeat: no-repeat;
-            background-position: center top;
+            background: black url(imagens/wallpaper002.jpg) center top no-repeat fixed ;
             background-size: cover;
+            /* Shorthand - background
+                color > image > position > repeat > [size] > attachment            
+            
+            */
+           
+
+
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -31,6 +35,14 @@
         <h1>Teste de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum culpa ipsam modi saepe corrupti cupiditate, id nihil laboriosam earum adipisci fugit labore enim, mollitia debitis eius quae, amet nobis explicabo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim eveniet qui quam iure non quia perferendis minus voluptatum provident iste impedit, sequi veniam distinctio maiores consequuntur repudiandae, odio repellat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas officiis omnis qui velit fuga debitis tempore maiores voluptate quaerat quidem consequuntur, obcaecati perferendis ea ipsum! Quasi autem dicta totam laudantium.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, perferendis odit optio laborum excepturi reprehenderit eius facilis quisquam eligendi, incidunt alias distinctio debitis amet accusamus repellat quia maiores natus dolore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum culpa ipsam modi saepe corrupti cupiditate, id nihil laboriosam earum adipisci fugit labore enim, mollitia debitis eius quae, amet nobis explicabo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim eveniet qui quam iure non quia perferendis minus voluptatum provident iste impedit, sequi veniam distinctio maiores consequuntur repudiandae, odio repellat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas officiis omnis qui velit fuga debitis tempore maiores voluptate quaerat quidem consequuntur, obcaecati perferendis ea ipsum! Quasi autem dicta totam laudantium.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, perferendis odit optio laborum excepturi reprehenderit eius facilis quisquam eligendi, incidunt alias distinctio debitis amet accusamus repellat quia maiores natus dolore.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum culpa ipsam modi saepe corrupti cupiditate, id nihil laboriosam earum adipisci fugit labore enim, mollitia debitis eius quae, amet nobis explicabo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim eveniet qui quam iure non quia perferendis minus voluptatum provident iste impedit, sequi veniam distinctio maiores consequuntur repudiandae, odio repellat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas officiis omnis qui velit fuga debitis tempore maiores voluptate quaerat quidem consequuntur, obcaecati perferendis ea ipsum! Quasi autem dicta totam laudantium.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, perferendis odit optio laborum excepturi reprehenderit eius facilis quisquam eligendi, incidunt alias distinctio debitis amet accusamus repellat quia maiores natus dolore.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum culpa ipsam modi saepe corrupti cupiditate, id nihil laboriosam earum adipisci fugit labore enim, mollitia debitis eius quae, amet nobis explicabo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim eveniet qui quam iure non quia perferendis minus voluptatum provident iste impedit, sequi veniam distinctio maiores consequuntur repudiandae, odio repellat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas officiis omnis qui velit fuga debitis tempore maiores voluptate quaerat quidem consequuntur, obcaecati perferendis ea ipsum! Quasi autem dicta totam laudantium.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, perferendis odit optio laborum excepturi reprehenderit eius facilis quisquam eligendi, incidunt alias distinctio debitis amet accusamus repellat quia maiores natus dolore.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum culpa ipsam modi saepe corrupti cupiditate, id nihil laboriosam earum adipisci fugit labore enim, mollitia debitis eius quae, amet nobis explicabo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum enim eveniet qui quam iure non quia perferendis minus voluptatum provident iste impedit, sequi veniam distinctio maiores consequuntur repudiandae, odio repellat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas officiis omnis qui velit fuga debitis tempore maiores voluptate quaerat quidem consequuntur, obcaecati perferendis ea ipsum! Quasi autem dicta totam laudantium.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, perferendis odit optio laborum excepturi reprehenderit eius facilis quisquam eligendi, incidunt alias distinctio debitis amet accusamus repellat quia maiores natus dolore.</p>
     </main>
 </body>
 </html>
