--- a/exercicios/projeto-cordel/projeto-cordel.html
+++ b/exercicios/projeto-cordel/projeto-cordel.html
@@ -93,6 +93,6 @@
         
     </section>
 
-    <footer>Site criado por <a href="https://brnjcs.github.io" target="_blank">Breno Souza</a></footer>
+    <footer>Site criado por <a href="https://instagram.com/brnjcs_" target="_blank">Breno Souza</a></footer>
 </body>
 </html>
