--- a/exercicios/ex024/iframe03.html
+++ b/exercicios/ex024/iframe03.html
@@ -9,6 +9,7 @@
             width: 95vw;
             height: 300px;
             border: 2px solid black;
+            background-color: lightgreen;
         }
     </style>
 </head>
@@ -23,7 +24,7 @@
     
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, quas nemo quidem optio perspiciatis beatae fugiat illum obcaecati! Doloribus soluta blanditiis harum beatae exercitationem ipsa voluptatibus libero earum quod esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam fugit laboriosam eos. Ratione ad magnam soluta ipsum culpa. Ipsa ducimus fugit nisi sit, esse mollitia doloribus praesentium tempore modi nulla?</p>
 
-    <iframe id="tela" name="frame"></iframe>
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma opção acima</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam animi nostrum, iste esse, ipsam earum eveniet autem ducimus facere ipsa molestiae deserunt? Enim ex vero excepturi dolore, laboriosam modi vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ratione adipisci voluptas voluptatem impedit ducimus magni sunt libero. Ducimus, omnis molestias dignissimos quibusdam ad ipsum cumque adipisci esse asperiores harum?</p>"></iframe>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam animi nostrum, iste esse, ipsam earum eveniet autem ducimus facere ipsa molestiae deserunt? Enim ex vero excepturi dolore, laboriosam modi vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem ratione adipisci voluptas voluptatem impedit ducimus magni sunt libero. Ducimus, omnis molestias dignissimos quibusdam ad ipsum cumque adipisci esse asperiores harum?</p>
 </body>
