--- a/exercicios/projeto-social/instagram.html
+++ b/exercicios/projeto-social/instagram.html
@@ -37,6 +37,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="instagram">
-    <a href="https://instagram.com/gustavoganabara/" target="_blank">ACESSE AI</a>
+    <a href="https://instagram.com/gustavoguanabara" target="_blank">ACESSE AI</a>
 </body>
 </html>
