--- a/exercicios/projeto-social/instagram.html
+++ b/exercicios/projeto-social/instagram.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="instagram">
-    <a href="https://instagram.com/gustavoguanabara" target="_blank">ACESSE AI</a>
+    <img src="imagens/tela-instagram-b.jpg" alt="instagram">
+    <a href="https://instagram.com/brnjcs_/" target="_blank">ACESSE AI</a>
 </body>
 </html>
