--- a/exercicios/ex0026/mq05/index.html
+++ b/exercicios/ex0026/mq05/index.html
@@ -32,7 +32,7 @@
     </main>
     <script>
         function mudouTamanho() {
-            if (window.innerHeight >= 768) {
+            if (window.innerWidth = 768) {
                 itens.style.display = 'block'
             } else {
                 itens.style.display = 'none'
